[gd_scene load_steps=5 format=3 uid="uid://cyxybo01c0g38"]

[ext_resource type="Theme" uid="uid://rkt0rb637w0g" path="res://assets/main_theme.tres" id="1_grhmc"]
[ext_resource type="Script" uid="uid://bh4e8lypbtmdl" path="res://scripts/main_menu.gd" id="1_hkecu"]
[ext_resource type="FontFile" uid="uid://binnamcsbaeja" path="res://assets/fonts/Abaddon_Bold.ttf" id="3_vhlfg"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_yauum"]
b = Vector2(256, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_grhmc")
script = ExtResource("1_hkecu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.745098, 0.639216, 0.501961, 1)
metadata/_edit_use_anchors_ = true

[node name="Background" type="Node2D" parent="."]

[node name="Ground" type="StaticBody2D" parent="Background"]
position = Vector2(0, 256)

[node name="CollisionShape" type="CollisionShape2D" parent="Background/Ground"]
shape = SubResource("SegmentShape2D_yauum")

[node name="AddPieceTimer" type="Timer" parent="Background"]
wait_time = 0.1
autostart = true

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -80.0
offset_right = 58.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vhlfg")
theme_override_font_sizes/font_size = 48
text = "Chess"
uppercase = true

[node name="VBox" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.292969
anchor_top = 0.503906
anchor_right = 0.699219
anchor_bottom = 0.859375
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="PlayBot" type="Button" parent="VBox"]
layout_mode = 2
text = "Play against bots"

[node name="PlayBot2" type="Button" parent="VBox"]
layout_mode = 2
text = "Play Against a Friend"

[connection signal="timeout" from="Background/AddPieceTimer" to="." method="add_falling_piece"]
[connection signal="pressed" from="VBox/PlayBot" to="." method="_on_play_bot_pressed"]
[connection signal="pressed" from="VBox/PlayBot2" to="." method="_on_play_with_friend_pressed"]
